--- a/Flights/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Flights/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link text-dark" [routerLink]="['/my-flights']">My Flights</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" [routerLink]="['/register-passenger']">Switch Passenger <i class="fas fa-user-circle"></i></a>
+          </li>
         </ul>
       </div>
     </div>
