--- a/Flights/ClientApp/src/app/search-flights/search-flights.component.html
+++ b/Flights/ClientApp/src/app/search-flights/search-flights.component.html
@@ -1,71 +1,67 @@
 <p>Search Flights</p>
 
 
-
-
-
 <h5 class="text-md-center m-5">
   Search For Flights
 </h5>
 
 
+<form [formGroup]="searchForm" (ngSubmit)="search()">
+  <div class="m-5 d-grid gap-3">
+    <div class="row">
 
-
-
-<div class="m-5 d-grid gap-3">
-  <div class="row">
-    <div class="col">
-      <div class="form-floating">
-        <input placeholder="Departure" class="form-control" />
-        <label class="text-primary form-label">Departure</label>
+      <div class="col">
+        <div class="form-floating">
+          <input formControlName="departure" placeholder="Departure" class="form-control" />
+          <label class="text-primary form-label">Departure</label>
+        </div>
       </div>
+      <div class="col">
+        <div class="form-floating">
+          <input formControlName="destination" placeholder="Destination" class="form-control" />
+          <label class="text-primary form-label">Destination</label>
+        </div>
+      </div>
+
     </div>
-    <div class="col">
-      <div class="form-floating">
-        <input placeholder="Destination" class="form-control" />
-        <label class="text-primary form-label">Destination</label>
+
+    <div class="row">
+
+      <div class="col">
+        <div class="form-floating">
+          <input formControlName="fromDate" class="form-control" type="date" placeholder="From" />
+          <label class="text-primary form-label">From</label>
+        </div>
       </div>
+      <div class="col">
+        <div class="form-floating">
+          <input formControlName="toDate" class="form-control" type="date" placeholder="To" />
+          <label class="text-primary form-label">To</label>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col text-end">
+        <label class="form-label text-primary mt-2"># Of Passengers</label>
+      </div>
+      <div class="col">
+        <div class="input-group">
+          <div class="input-group-text">For</div>
+          <input formControlName="numOfPassengers" class="form-control" type="number" placeholder="1" />
+          <div class="input-group-text">Passengers</div>
+
+          <button class="btn-primary btn" type="submit">
+            <i class="fas fa-search"></i>
+          </button>
+        </div>
+      </div>
+
     </div>
   </div>
-
-  <div class="row">
-    <div class="col">
-      <div class="form-floating">
-        <input class="form-control" type="date" placeholder="From" />
-        <label class="text-primary form-label">From</label>
-      </div>
-    </div>
-    <div class="col">
-      <div class="form-floating">
-        <input class="form-control" type="date" placeholder="To" />
-        <label class="text-primary form-label">To</label>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col text-end">
-      <label class="form-label text-primary mt-2"># Of Passengers</label>
-    </div>
-    <div class="col">
-      <div class="input-group">
-        <div class="input-group-text">For</div>
-        <input class="form-control" type="number" placeholder="1" />
-        <div class="input-group-text">Passengers</div>
-
-        <button (click)="search()" class="btn-primary btn" type="submit">
-          <i class="fas fa-search"></i>
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
+</form>
 
 
 <div *ngFor="let flight of searchResult">
